# pyMongo2BigQuery

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyMongo2BigQuery/: __init__.py  bigQuery.py  mongoConnection.py  utils.py
