[metadata]
name = pyMongo2BigQuery
version = 0.0.1
author = Kbx Digital
author_email = it_admin@kbxdigital.com
description =  Helper module to easily connect to mongodb instance and export it a big query dataset
long_description = README.md
long_description_content_type = text/markdown
url =  https://github.com/itadminkbx/pyMongo2BigQuery
classifiers = 
	Programming Language :: Python :: 3,
	Programming Language :: Python :: 3 :: Only,
	License :: OSI Approved : Apache License,
	Operating System :: OS Independent,
packages = find:
python_requires = >=3.7
include_package_data = True


[options]
install_requires = 
	google-cloud-bigquery
	google-cloud-storage
	python-dotenv
	pytz
	pymongo
	dnspython
